--- a/3386-git-github-projeto_inicial/index.html
+++ b/3386-git-github-projeto_inicial/index.html
@@ -28,7 +28,7 @@
                     <button onclick="reiniciarJogo()" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
                 </div>
             </div>
-            <img src="robo.jpg-removebg.png" alt="Um container__imagem-robo" class="container__imagem-robo"/>
+            <img src= "robo.jpg-removebg.png" />
         </div>
     </div>
 
